syntax = "proto3";
package schema;

service SearchService {
    rpc Search(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
    string searchWord = 1;
    int64 pagination = 2;
}

message SearchResponse {
    repeated Movie search = 1;
}

message Movie {
    string title = 1;
	string year = 2;
	string rated = 3;
	string released = 4;
	string runtime = 5;
	string genre = 6;
	string director = 7;
	string writer = 8;
	string actors = 9;
	string plot = 10;
	string language = 11;
	string country = 12;
	string awards = 13;
	string poster = 14;
	repeated Rating ratings = 15;
	string metascore = 16;
	string imdbRating = 17;
	string imdbVotes = 18;
	string imdbID = 19;
	string type = 20;
	string dvd = 21;
	string boxOffice = 22;
	string production = 23;
	string website = 24;
}

message Rating {
    string source = 1;
	string value  = 2;
}